# trashcan

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml
src/: cli.rs  file.rs  flags.rs  main.rs  shell_completion.rs  trashcan.rs  utils.rs
src/cli/: build_cli.rs  core.rs  handle_files_core.rs  manage_flags.rs
src/flags/: core.rs
src/trashcan/: core.rs  directory.rs  empty_trashcan.rs  file.rs  list_contents_trashcan.rs  trashcan_list_contents.rs  trashcan_remove_garbage.rs
src/trashcan/file/: delete_file_permanently.rs  file_move_to_trash.rs  file_nuke.rs  file_restore.rs  move_file_to_trash.rs  restore_file.rs
