[package]
name = "trashcan"
version = "1.4.0"
edition = "2024"

[dependencies]
humansize = "2.1.3"
owo-colors = "4.2.2"
users = "0.11.0"
chrono = "0.4.41"
dialoguer = "0.11.0"
uuid = { version = "1.18.0", features = ["v4"] }
human_bytes = "0.4.3"

[dev-dependencies]

[dependencies.clap]
version = "4.5.38"
features = [ "derive",]
